--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <form>
     <!-- Otros campos del formulario -->
-    <div class="g-recaptcha" data-sitekey="TU_CLAVE_DEL_SITIO"></div>
+    <div class="g-recaptcha" data-sitekey="6LczGqUmAAAAABTjDTmwz7nJXCS5rYyKokLXj4Uf"></div>
     <button type="submit">Enviar</button>
     </form>
 
